[package]
name = "U"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
gnuplot = "0.0.43"
lazy_static = "1.4.0"
noise = "0.9.0"
rand = "0.8.5"
rayon = "1.10.0"
[dependencies.sdl2]
version = "0.36"
features = ["ttf", "image", "mixer", "gfx"]
